Fix T42221: 'Shadow Width' influences tooltip size

Positioning of popups was using shadow width for placement,
could give some quite odd results.